# python-template

./: README.md  _pyproject.toml  prek.toml  pyproject.toml
.github/workflows/: prek.yml  pytest.yml  template-init.yml
src/python_template/: cli.py  schemas.py
src/python_template_test/: cli.py
tests/: test_utils.py
